# scanline

./: .gitignore  CMakeLIsts.txt  README.md  buildAll.sh
src/: CMakeLists.txt  Obj.cpp  Obj.h  Point.h  Scanline.cpp  Scanline.h  Tool.h  main.cpp
